@@ -5,6 +5,8 @@ changelog: https://github.com/wesnoth/wesnoth-old/blob/master/changelog
 Version 1.11.4+dev:
  * Language and i18n:
    * Updated translations:
+ * User interface:
+   * Added notification support for Windows
 
 
 Version 1.11.4:
