@@ -1,6 +1,8 @@
 Version 1.11.4+dev:
  * Language and i18n:
    * Updated translations: 
+ * User interface:
+   * Added notification support for Windows
 
 Version 1.11.4:
  * AI:
